--- a/style.css
+++ b/style.css
@@ -11,8 +11,14 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Rubik", sans-serif;
-    scroll-behavior: smooth;
-    overflow-x: hidden;
+}
+
+@media screen and (max-width: 600px) {
+    .overflow-controller {
+        position: relative;
+        overflow-x: hidden;
+    }
+    
 }
 
 /* styling for navigation bar starts here */
@@ -178,6 +184,7 @@ div.mobile-menu-button > span:last-child {
 
 @media screen and (max-width: 600px) {
     .left {
+        flex-direction: column;
         width: 100%;
         height: 100vh;
     }
@@ -322,6 +329,11 @@ div.mobile-menu-button > span:last-child {
 @media screen and (max-width: 600px) {
     .top-left, .side-lower {
         display: none;
+    }
+
+    .left > .resume-link {
+        position: relative;
+        bottom: 0;
     }
     
 }
